# delta-kernel-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: run-examples.yml  semver-checks.yml
acceptance/: Cargo.toml
acceptance/src/: data.rs  meta.rs
acceptance/tests/: dat_reader.rs  other.rs
derive-macros/src/: lib.rs
ffi/: Cargo.toml  README.md
ffi/examples/common/: kernel_utils.c  kernel_utils.h
ffi/examples/read-table/: CMakeLists.txt  arrow.c  kernel_schema_visitor.h  read_table.c  schema.h
ffi/examples/visit-expression/: CMakeLists.txt  engine_to_kernel_expression.h  expression.h  expression_print.h  visit_expression.c
ffi/src/: domain_metadata.rs  engine_data.rs  engine_funcs.rs  error.rs  ffi_test_utils.rs  lib.rs  log_path.rs  scan.rs  schema.rs  schema_visitor.rs  table_changes.rs  test_ffi.rs
ffi/src/expressions/: engine_visitor.rs  kernel_visitor.rs
ffi/src/transaction/: mod.rs  transaction_id.rs  write_context.rs
ffi/tests/invalid-handle-code/: mut-clone-handle.stderr  shared-as-mut.stderr  shared-not-sync.stderr
ffi/tests/read-table-testing/: run_test.sh
ffi/tests/read-table-testing/expected-data/: nested-types-cols.expected  (+3 more)
ffi/tests/test-expression-visitor/: expected.txt
integration-tests/src/: main.rs
kernel/: Cargo.toml
kernel/benches/: expression_bench.rs  metadata_bench.rs
kernel/examples/checkpoint-table/: Cargo.toml  README.md
kernel/examples/checkpoint-table/src/: main.rs
kernel/examples/common/: Cargo.toml
kernel/examples/common/src/: lib.rs
kernel/examples/inspect-table/: Cargo.toml
kernel/examples/inspect-table/src/: main.rs
kernel/examples/read-table-multi-threaded/: Cargo.toml  README.md
kernel/examples/read-table-multi-threaded/src/: main.rs
kernel/examples/read-table-single-threaded/: Cargo.toml  README.md
kernel/examples/write-table/: Cargo.toml  README.md
kernel/examples/write-table/src/: main.rs
kernel/src/: arrow_compat.rs  committer.rs  engine_data.rs  error.rs  last_checkpoint_hint.rs  lib.rs  listed_log_files.rs  log_path.rs  log_replay.rs  log_segment.rs  path.rs  row_tracking.rs  snapshot.rs  table_configuration.rs  table_properties.rs  transforms.rs  utils.rs
kernel/src/action_reconciliation/: log_replay.rs  mod.rs
kernel/src/actions/: crc.rs  deletion_vector.rs  deletion_vector_writer.rs  domain_metadata.rs  mod.rs  set_transaction.rs  visitors.rs
kernel/src/checkpoint/: log_replay.rs  mod.rs  tests.rs
kernel/src/committer/: commit_types.rs  filesystem.rs  mod.rs
kernel/src/doctests/: into_engine_data.rs  mod.rs  to_schema.rs
kernel/src/engine/: arrow_conversion.rs  arrow_data.rs  arrow_get_data.rs  arrow_utils.rs  ensure_data_types.rs  mod.rs  parquet_row_group_skipping.rs
kernel/src/expressions/: column_names.rs  literal_expression_transform.rs  mod.rs  scalars.rs  transforms.rs
kernel/src/kernel_predicates/: mod.rs  tests.rs
kernel/src/log_compaction/: mod.rs  tests.rs  writer.rs
kernel/src/log_reader/: checkpoint_manifest.rs  commit.rs  mod.rs
kernel/src/log_replay/: deduplicator.rs
kernel/src/log_segment/: tests.rs
kernel/src/metadata/: builder.rs
kernel/src/metrics/: events.rs  mod.rs  reporter.rs
kernel/src/parallel/: mod.rs  sequential_phase.rs
kernel/src/scan/: data_skipping.rs  field_classifiers.rs  log_replay.rs  mod.rs  state.rs  state_info.rs  test_utils.rs  tests.rs
kernel/src/schema/: compare.rs  derive_macro_utils.rs  mod.rs  variant_utils.rs
kernel/src/snapshot/: builder.rs
kernel/src/table_changes/: log_replay.rs  mod.rs  physical_to_logical.rs  resolve_dvs.rs  scan.rs  scan_file.rs
kernel/src/table_features/: column_mapping.rs  mod.rs  timestamp_ntz.rs
kernel/src/table_properties/: deserialize.rs
kernel/src/transaction/: mod.rs
kernel/tests/: cdf.rs  dv.rs  golden_tables.rs  hdfs.rs  log_compaction.rs  log_tail.rs  read.rs  row_tracking.rs  v2_checkpoints.rs  write.rs  write_row_tracking.rs
kernel/tests/data/: 300k-add-files-100-col-partitioned.tar.zst  cdf-column-mapping-id-mode.tar.zst  cdf-column-mapping-name-mode-3-7.tar.zst  cdf-column-mapping-name-mode.tar.zst  cdf-table-backtick-column-names.tar.zst  cdf-table-data-change.tar.zst  cdf-table-delete-conditional-all-rows.tar.zst  cdf-table-delete-conditional-two-rows.tar.zst  cdf-table-delete-unconditional.tar.zst  cdf-table-non-partitioned.tar.zst  cdf-table-partitioned.tar.zst  cdf-table-simple.tar.zst  cdf-table-update-ops.tar.zst  cdf-table-with-cdc-and-dvs.tar.zst  cdf-table-with-dv.tar.zst  cdf-table.tar.zst  timestamp-partitioned-table.tar.zst  v2-checkpoints-json-with-last-checkpoint.tar.zst  v2-checkpoints-json-with-sidecars.tar.zst  v2-checkpoints-json-without-sidecars.tar.zst  v2-checkpoints-parquet-with-last-checkpoint.tar.zst  v2-checkpoints-parquet-with-sidecars.tar.zst  v2-checkpoints-parquet-without-sidecars.tar.zst  v2-classic-checkpoint-json.tar.zst  v2-classic-checkpoint-parquet.tar.zst
mem-test/: Cargo.toml
mem-test/src/: lib.rs
mem-test/tests/: dhat_large_table_data.rs  dhat_large_table_log.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
uc-catalog/: Cargo.toml
uc-catalog/src/: committer.rs  lib.rs
uc-client/: Cargo.toml
uc-client/examples/: uc-cli.rs
uc-client/src/: client.rs  commits_client.rs  http.rs  lib.rs
uc-client/src/models/: commits.rs  mod.rs
(+19 files in other folders)
