[workspace]
members = [
    "acceptance",
    "derive-macros",
    "ffi",
    "kernel",
    "kernel/examples/*",
    "test-utils",
    "feature-tests",
    "mem-test",
    "uc-client", # WIP: this is an experimental UC client for catalog-managed table work
    "uc-catalog", # WIP: this is an experimental UC catalog implementation
]
# note that in addition to the members above, the workspace includes examples:
# - inspect-table
# - read-table-changes
# - read-table-multi-threaded
# - read-table-single-threaded
# - write-table
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
rust-version = "1.84"
version = "0.16.0"
