[package]
name = "inspect-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
delta_kernel = { path = "../../../kernel", features = [
  "arrow",
  "default-engine-rustls",
  "internal-api",
] }
env_logger = "0.11.8"

# for cargo-release
[package.metadata.release]
release = false
