[package]
name = "read-table-multi-threaded"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "57", features = ["prettyprint", "chrono-tz"] }
clap = { version = "4.5", features = ["derive"] }
# common pulls in arrow latest so we have to keep all these in sync here
common = { path = "../common" }
delta_kernel = { path = "../../../kernel", features = [
  "arrow",
  "default-engine-rustls",
  "internal-api",
] }
env_logger = "0.11.8"
spmc = "0.3.0"
url = "2"

# for cargo-release
[package.metadata.release]
release = false
