[package]
name = "write-table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrow = { version = "56", features = ["prettyprint", "chrono-tz"] }
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
delta_kernel = { path = "../../../kernel", features = [
  "arrow-56",
  "default-engine-rustls",
  "internal-api",
] }
env_logger = "0.11.8"
itertools = "0.14"
url = "2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

# for cargo-release
[package.metadata.release]
release = false
